# padel-booker

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  test.yml
data/: config.json
src/padel_booker/: __init__.py  api.py  booker.py  exceptions.py  models.py  navigation_strategy.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_booker.py  test_device_modes.py  test_exceptions.py  test_integration_booking_flow.py  test_models.py  test_navigation_strategy.py  test_utils.py
